fix: search by api and not by client, fix: show all favourites including favorites that arnt visible, fix: on search apply a little debounce & abort, to not search everi 0.0000001ms and don't make infinite fetch on api

--- a/src/styles/CharacterCard.module.scss
+++ b/src/styles/CharacterCard.module.scss
@@ -1,9 +1,11 @@
+@use "./variables" as *;
+
 .card {
   display: flex;
   flex-direction: column;
   height: 100%;
   width: 100%;
-  &:hover {
+  &:active {
     div {
       &:before {
         height: 100%;
@@ -11,6 +13,19 @@
       .heart {
         fill: white;
         stroke: white;
+      }
+    }
+  }
+  @media screen and (min-width: $tablet) {
+    &:hover {
+      div {
+        &:before {
+          height: 100%;
+        }
+        .heart {
+          fill: white;
+          stroke: white;
+        }
       }
     }
   }
